--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -56,6 +56,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 60px;
 }
 
 .nav__list {
@@ -91,6 +92,7 @@
 @media (max-width: 600px) {
   .nav {
     padding: 0.5rem;
+    height: 50px;
   }
 
   .nav__list {
